[package]
name = "sagemaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
aws-config = "0.55.1"
aws-sdk-sagemaker = "0.26.0"
aws-smithy-types-convert = "0.55.1"

[dependencies.clap]
version = "4.2.1"
features = ["derive"]

[dependencies.tokio]
version = "1.20.1"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.15"
features = ["env-filter"]
